# Kursach-po-Algoritmam

./: CMakeLists.txt
Kursach/: CMakeLists.txt  Kursach.cpp  Kursach.h
